test/conformance/chainsaw/verify-images/clusterpolicy/standard/notary-tsa-timestamp-verification/pod-assert.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test
  namespace: notary-tsa-verify-images
